--- a/profiles/commons/themes/contrib/commons_origins/css/global.styles.css
+++ b/profiles/commons/themes/contrib/commons_origins/css/global.styles.css
@@ -1,6 +1,3 @@
-/* @override 
-	http://bridginghistorias.gc.cuny.edu/profiles/commons/themes/contrib/commons_origins/css/global.styles.css?mollyc */
-
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,800italic,400,800);
 
 
@@ -452,8 +449,8 @@ var {
  */
 #site-name {
   margin: 0;
-/*  font-family: 'Trebuchet MS';
-  font-weight: 700;*/
+  font-family: 'Trebuchet MS';
+  font-weight: 700;
 }
 #site-name a:link, #site-name a:visited {
   text-decoration: none;
@@ -3690,8 +3687,17 @@ body.front.logged-in .view-commons-homepage-content .article.node.node-page .lin
   background: url('../images/icons/help.png?1363371593') no-repeat center 10px;
 }
 
-.palette-bridging-historias #block-search-form, {
-  display: none;
+.palette-bridging-historias #block-search-form,
+/*  notification settings section */
+.palette-bridging-historias #quicktabs-commons_follow_ui li,
+.palette-bridging-historias #quicktabs-commons_follow_ui span.flag-commons-follow-group.flag-wrapper,
+.palette-bridging-historias form#commons-follow-ui-notification-settings-form .description,
+.palette-bridging-historias form#commons-follow-ui-notification-settings-form .form-item-message-subscribe-email
+ {
+ 	display: none;
+}
+.palette-bridging-historias  #quicktabs-commons_follow_ui .quicktabs-tabpage {
+	margin-top:  1.5em;
 }
 body.palette-bridging-historias.front.logged-in .view-commons-homepage-content .article.node .author-datetime {
 	margin-bottom: 10px ;
@@ -3700,9 +3706,12 @@ body.palette-bridging-historias.front .field-name-body {
 	margin-top: 0px;
 }
 body.palette-bridging-historias.page-node.node-type-group h2#page-title,
-body.palette-bridging-historias h2#page-title {
+body.palette-bridging-historias h2#page-title,
+body.palette-bridging-historias.page-events h2.pane-title,
+body.palette-bridging-historias header.node-header h2 {
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
 }
 .palette-bridging-historias .flag-commons-follow-node {
   display: none;
@@ -3721,6 +3730,37 @@ body.palette-bridging-historias h2#page-title {
   display: none;
 }
 
+.palette-bridging-historias .commons-login {
+  box-shadow: 1px 1px 1px #c0c2bf inset, 0 3px 3px rgba(0, 0, 0, 0.09);
+  min-width: 83px;
+  height: 34px;
+  padding: 0 10px;
+  background-color: #919591;
+  *zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FFcccccc', endColorstr='#FF999999');
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #cccccc), color-stop(12%, #aaaaaa), color-stop(33%, #757a74), color-stop(100%, #999999));
+  background-image: -webkit-linear-gradient(top, #cccccc 0%, #aaaaaa 12%, #757a74 33%, #999999 100%);
+  background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 12%, #757a74 33%, #999999 100%);
+  background-image: -o-linear-gradient(top, #cccccc 0%, #aaaaaa 12%, #757a74 33%, #999999 100%);
+  background-image: linear-gradient(top, #cccccc 0%, #aaaaaa 12%, #757a74 33%, #999999 100%);
+  border: 1px solid #585C58;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  color: white;
+  font-size: 19px;
+  line-height: 34px;
+  font-weight: bold;
+  text-align: center;
+  display: inline-block;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.49);
+}
+
+.palette-bridging-historias section.field-name-group-content-access {
+  display: none;
+}
 
 /* remove New York, NY and USA from address */
 .palette-bridging-historias .addressfield-container-inline.locality-block.country-US {
@@ -3735,6 +3775,11 @@ body.palette-bridging-historias h2#page-title {
 body.front.palette-bridging-historias.not-logged-in #block-system-main .pane-1 .pane-title {
   font-size: 24px;
   line-height: 32px;
+}
+
+/* remove menu from not logged in pages */
+body.palette-bridging-historias.not-logged-in #menu-bar {
+  display: none;
 }
 
 body.front.palette-bridging-historias .region-three-33-top {
