Groups landing page: Widening container around the profile pics

--- a/profiles/commons/themes/contrib/commons_origins/css/global.styles.css
+++ b/profiles/commons/themes/contrib/commons_origins/css/global.styles.css
@@ -3707,6 +3707,11 @@ body.front.logged-in .view-commons-homepage-content .article.node.node-page .lin
 .palette-bridging-historias  #quicktabs-commons_follow_ui .quicktabs-tabpage {
 	margin-top:  1.5em;
 }
+/* Groups page - widen the container that encloses the profile pics */
+.palette-bridging-historias .pane-commons-contributors-group-panel-pane-1 {
+  width: auto;
+ 
+}
 body.palette-bridging-historias.front.logged-in .view-commons-homepage-content .article.node .author-datetime {
 	margin-bottom: 10px ;
 }
