--- a/profiles/commons/themes/contrib/commons_origins/css/global.styles.css
+++ b/profiles/commons/themes/contrib/commons_origins/css/global.styles.css
@@ -3783,31 +3783,32 @@ body.palette-bridging-historias.page-events p.author-datetime, body.palette-brid
 }
 
 .palette-bridging-historias .commons-login {
-  box-shadow: 1px 1px 1px #c0c2bf inset, 0 3px 3px rgba(0, 0, 0, 0.09);
+  box-shadow: 1px 1px 1px #feb431 inset, 0 3px 3px rgba(0, 0, 0, 0.09);
   min-width: 83px;
-  height: 34px;
+  height: 36px;
   padding: 0 10px;
-  background-color: #919591;
   *zoom: 1;
-  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FFcccccc', endColorstr='#FF999999');
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #cccccc), color-stop(12%, #aaaaaa), color-stop(33%, #757a74), color-stop(100%, #999999));
-  background-image: -webkit-linear-gradient(top, #cccccc 0%, #aaaaaa 12%, #757a74 33%, #999999 100%);
-  background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 12%, #757a74 33%, #999999 100%);
-  background-image: -o-linear-gradient(top, #cccccc 0%, #aaaaaa 12%, #757a74 33%, #999999 100%);
-  background-image: linear-gradient(top, #cccccc 0%, #aaaaaa 12%, #757a74 33%, #999999 100%);
-  border: 1px solid #585C58;
+  border: 1px solid #ff9126;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
   color: white;
-  font-size: 19px;
-  line-height: 34px;
+  font-size: 21px;
+  line-height: 36px;
   font-weight: bold;
   text-align: center;
   display: inline-block;
-  text-shadow: 1px 1px rgba(0, 0, 0, 0.49);
+  text-shadow: 0px 0px 3px rgba(100, 0, 0, 0.69);
+  background: #feb431; /* Old browsers */
+  background: -moz-linear-gradient(top, #feb431 21%, #fb8410 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(21%,#feb431), color-stop(100%,#fb8410)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #feb431 21%,#fb8410 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #feb431 21%,#fb8410 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #feb431 21%,#fb8410 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #feb431 21%,#fb8410 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feb431', endColorstr='#fb8410',GradientType=0 ); /* IE6-9 */
 }
 
 .palette-bridging-historias section.field-name-group-content-access {
